[gd_scene load_steps=11 format=3 uid="uid://ca0xbe7idphyi"]

[ext_resource type="Script" uid="uid://biek8dameoxjt" path="res://scenes/ui/map_edit/hud/packet_list/packet_list_main.gd" id="1_imyqi"]
[ext_resource type="FontFile" uid="uid://dcn8y544v80id" path="res://assets/fonts/DotGothic16-Regular.ttf" id="2_24cwy"]
[ext_resource type="Theme" uid="uid://dxcditpyjnw8h" path="res://resources/theme/theme.tres" id="3_b3xul"]
[ext_resource type="Texture2D" uid="uid://b6yswvgr3g1na" path="res://assets/images/stages/stage_button_bg.png" id="3_yaouq"]
[ext_resource type="Texture2D" uid="uid://c5xlhhaxrwm3j" path="res://assets/images/stages/stage_button_bg_disabled.png" id="4_p5spe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3xul"]
bg_color = Color(0.176419, 0.176419, 0.176419, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_alp5q"]
texture = ExtResource("3_yaouq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_78tbj"]
texture = ExtResource("4_p5spe")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yaouq"]
texture = ExtResource("3_yaouq")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_24cwy"]
color = Color(0.470076, 0.470076, 0.470076, 1)

[node name="PacketListMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_imyqi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b3xul")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Spacer2" type="Control" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_24cwy")
theme_override_font_sizes/font_size = 16
text = "パケット一覧"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_alp5q")
theme_override_styles/pressed = SubResource("StyleBoxTexture_78tbj")
theme_override_styles/normal = SubResource("StyleBoxTexture_yaouq")
text = "x"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxLine_24cwy")

[node name="TabButtons" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="CorrectButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TabButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
theme = ExtResource("3_b3xul")
text = "Correct"

[node name="IncorrectButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TabButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
theme = ExtResource("3_b3xul")
text = "Incorrect"

[node name="UnknownButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/TabButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
theme = ExtResource("3_b3xul")
text = "Unknown"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxLine_24cwy")

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PacketContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4
